--- a/html&css&js/index.html
+++ b/html&css&js/index.html
@@ -71,7 +71,7 @@
 </div>
 
 <div class="menu">
-    <p class="title-menu">Our top sellling itemss</p>
+    <p class="title-menu">Ours top sellling itemss</p>
 </div>
 </body>
 </html>
