Completed HELL YEAH!!

--- a/html&css&js/index.html
+++ b/html&css&js/index.html
@@ -71,7 +71,81 @@
 </div>
 
 <div class="menu">
-    <p class="title-menu">Ours top sellling itemssss</p>
+    <p class="title-menu">Our top selling items.</p>
+    <p class="title-menu-desc">"Get'em while they're hot!"</p>
+
+    <div class="food-container">
+        <div class="food 1">
+            <div class="food-img"><img src="../background-img/latte-macchiato.jpg" class="food-imgs"></div>
+
+            <div class="food-desc">
+            <p>Latte Macchiato</p>
+            <p class="p2">"Enjoy a hot or cold latte machiato with your preferred food"</p>
+            <a href="#" class="food-detail">See more details</a>
+            </div>
+
+        </div>
+
+        <div class="food 2">
+            <div class="food-img"><img src="../background-img/donuts.jpg" class="food-imgs"></div>
+
+            <div class="food-desc">
+            <p>2 Sugar Donuts</p>
+            <p class="p2">"Enjoy 2 fresh baked sugary donuts with your prefered drink!"</p>
+            <a href="#" class="food-detail">See more details</a>
+            </div>
+
+        </div>
+
+        <div class="food 3">
+            <div class="food-img"><img src="../background-img/sandwich.jpg" class="food-imgs"></div>
+
+            <div class="food-desc">
+            <p>Morning Sandwich</p>
+            <p class="p2">"Enjoy a freshly cooked sandwich with your preferred drink!"</p>
+            <a href="#" class="food-detail">See more details</a>
+            </div>
+
+        </div>
+
+        <div class="food 4">
+            <div class="food-img"><img src="../background-img/pizza.jpg" class="food-imgs"></div>
+
+            <div class="food-desc">
+            <p>Margarita pizza</p>
+            <p class="p2">"Enjoy a freshly baked margarita pizza with your preferred drink!"</p>
+            <a href="#" class="food-detail">See more details</a>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="hire">
+    <div class="hire-box">
+        <p class="hire-title">Looking for a job?</p>
+        <div class="hire-desc">
+        <P>We're currently hiring in over 300 places.
+            We have competetive salary, Great time-off, Unlimited Sick-days and Tuition Reimburstment.
+            We now have over 1'000 Employees and counting. Interested? Come and join us!</P>
+        </div>
+        <div class="hire-gray">
+            "Click the button below for more information"
+        </div>
+        <div class="hire-btn">
+            <button class="apply">Apply for job</button>
+        </div>
+    </div>
+</div>
+
+<div class="footer">
+    <p>Copyrighted by The coco's brewery.</p>
+    <div class="footer-links">
+    <a href="#" class="links">Sitemap</a>
+    <a href="#" class="links">Information</a>
+    <a href="#" class="links">Social Media</a>
+    <a href="#" class="links">Contact the company</a>
+    </div>
 </div>
 </body>
 </html>
