--- a/html&css&js/index.html
+++ b/html&css&js/index.html
@@ -10,15 +10,28 @@
 <body>
 <div class="background-img">
     <div class="bg-shade">
-    <div class="header">
-        <p>Coco's Coffee Brewery</p>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">About us</a></li>
-        </ul>
-    </div>
 
+ <!--Navigation Bar-->
+
+        <nav class="navbar">
+        <div class="brand-name"><a href="#"><p>Coco's Coffee Brewery</p></a></div>
+        <div class="nav1">
+        <ul class="nav-menu">
+            <li class="nav-item"><a href="#" class="navlink">Home</a></li>
+            <li class="nav-item"><a href="#" class="navlink">Location</a></li>
+            <li class="nav-item"><a href="#" class="navlink">Menu</a></li>
+            <li class="nav-item"><a href="#" class="navlink">Hiring</a></li>
+        </ul>
+
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </div>
+</nav>
+
+ <!--Main Content-->
     <div class="title-container">
     <div class="title">
         Coco's Coffee Brewery
@@ -147,5 +160,7 @@
     <a href="#" class="links">Contact the company</a>
     </div>
 </div>
+
+<script src="./index.js"></script>
 </body>
 </html>
